* Added a Pacifist mode recipe for the Deep Mob Learning Glitch Heart (#614)
* Blacklisted Nuclearcraft Fusion Core from CarryOn pickup (#905)
* Allowed all Stone Tools to be fixed using any Cobblestone. Very. Important. Very. Cool. Also, you can repair Wooden Shears now (#235)

Enhancements:
* Added "Usage: Power / Energy Transfer Pipe" tooltip to Signalum-Plated ducts (#616)
* Add "Applied Energistics" tooltip to AE2Stuff items to aid in locating them in JEI
* Add tooltip to Mob Spawner to inform players how to harvest it (#486)
* Add tooltip to Weirding Gadget (#635)
* Add Netherrack & Sugar Cane compression recipes to Cyclic Packager (#804)
* Add support for all buckets in NuclearCraft's Infinite Water Source recipe (#640)
* Add support for all buckets in Cauldron Obsidian recipe
* Add Mystical Agradditions paxels to "Paxel Rose" advancement (#592)
* Add Cottonwood amber recipe to packager
* Added the ability to melt down Tinkers' casts into Gold
* Updated the ingame issue tracker link to go directly to the issues page
* Slightly lowered the chance for Gravitational Anomalies to generate from 5% to 3.33%
* Changed the Cobblestone Circuit Mold recipe to require a Chisel Head Cast instead of using chisels. This is due to limitations on using damaged chisels
* Add salt block -> brine melter recipe (#714)
* Swapped Sulfur drops to Mekanism Sulfur to stay consistent with recipes/oredict (disabled COFH fireproof mob sulfur drops)
* Added a recipe for Ink Sacs that use Overworldian Matter combined with Lily Pads

Mods Added:
* Patchouli (1.0-19)

Mod Updates:
* Apotheosis (1.10.0)
* Barrels, Drums, Storage, and More (0.0.24)
* NuclearCraft (2.16f)
* Weirding Gadgets (2.1.16)
* FastWorkbench (1.7.1)
* Cyclic (1.19.9)
* Compact Machines (3.0.18-b278)
* Deep Mob Learning (2.5.1)
* Wawla (2.5.273)
* Prestige (1.1.53)


---------------------------------------------------------------------

4.0.5

Bug Fixes:
* Removed Dragon spawning from all worlds minus Sky Grid
