@@ -4,6 +4,14 @@
     "id": "OD:treeLeaves"
   },
   {
+    "energy": 2000,
+    "id": "minecraft:leaves2:1"
+  },
+  {
+    "energy": 2000,
+    "id": "minecraft:leaves2"
+  },
+  {
     "energy": 320000,
     "id": "chisel:block_coal:3"
   },
